@startuml
class Application{
    +main()
}
interface AccountService{
    +createAccount()
    +deposit()
    +withdrow()
    +transferFunds()
    +getAllAccounts()
    +getAccount()
}
class AccountDao{
    +saveAccount()
    +updateAccount()
    +loadAccount()
    +getAccounts()
}
class Account{
    +accountNumber
    +interestAdder
    +coulculateInterest
}

class AccountEntry {
    +date
    +amount
    +description
    +fromAccountNumber
    +fromPersonName
}

interface Command {
    +excute()
    +redo()
    +undo()
}
class Invoker {
    +setCommand()
}
Application --> Invoker
Invoker --> Command
WithdrawCommand ..|> Command
DepositCommand ..|> Command
TransferCommand ..|> Command
Command --> AccountService
Application --> AccountService
AccountService --> AccountDao
AccountService ..> Account
Account --> Customer : belongs
Account *- AccountEntry: has *


@enduml